# c-http-client

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c  resolve_dns.c  resolve_dns.h
